# funniest-joke-with-LLMs

./: .gitignore  LICENSE  README.md  Report.md  output_eg.md  output_report.md  outputs.md  plansearch_workflow.md  pyproject.toml  requirements.txt
src/: __init__.py  experiments.ipynb  llm_judge.py  main.py  novelty_measure.py  plansearch.py  punchline_list.json  setup_list.json
src/embeddings/acu_level/: punchline_index.faiss  setup_index.faiss
src/embeddings/joke_level/: joke_index.faiss  reference_embeddings.npy
tests/: test_judge.py  test_novelty.py  test_plansearch.py
